--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "cesi/stockocesi",
     "type": "project",
     "require": {
-        "twig/twig": "^3.16"
+        "twig/twig": "^3.20",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.4"
